--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -17,4 +17,69 @@ tags:
 * _ 表示空标识符，用于语法需要变量名、但逻辑不需要的时候
 * map[string]int 表示map的key是string，value是int
 * make(map[]) 用于创建空map
-* bufio 包用于读取输入
+* bufio 包用于读取输入，类似c
+* printf 指定格式输出，类似c
+
+# 程序结构
+
+* 函数内部定义的变量只在函数内有效，外部定义的变量在当前包的所有文件中都有效
+* 大写开头的名字，表示他是导出的，fmt.Printf
+* 用驼峰而不是下划线
+* 自动初始化规则：
+    * 数值 =》 0
+    * 布尔 =》 false
+    * 字符串 =》 ""
+    * 接口、引用 =》 nil
+* 变量的声明周期
+    * 包一级： 与整个程序运行周期一致
+    * 局部变量： 创建开始，到不再被引用结束
+* 关键字 type 定义类型
+    * type 类型名字 底层类型
+    * 把复杂的匿名结构体定义一下，省了很多代码
+    * 可以在类型里定义方法
+    * 搞得有点像类
+* 包里面多个文件
+* 每个包有独立的命名空间
+* 构建工具解释了导入的包路径
+* 包初始化顺序：
+    * 包内按照文件名排序
+    * init() 按照包的引用顺序自动被调用，类似深度遍历
+
+# 基础数据类型
+
+* 数据类型有四类
+    * 基础类型： 数字；字符串；布尔值；
+    * 复合类型： 数组；结构体；
+    * 引用类型： 指针；切片；字典；函数；
+    * 接口类型
+* 整型
+    * 有符号： int8、int16、int32和int64
+    * 无符号： uint8、uint16、uint32和uint64
+    * 编译器和硬件决定大小： int和uint
+    * Unicode 中的 rune 类型与 int32 等价
+    * byte 与 int8 等价
+    * uintptr 用于底层编程
+* 有符号的int使用最多，如数组内置的len函数
+* 浮点数
+    * float32 
+    * float64
+    * float64用的更多，更精确   
+* 复数，complex64 和 complex128
+* 字符串
+    * 不可修改
+    * ASCII 转义
+```
+\a      响铃
+\b      退格
+\f      换页
+\n      换行
+\r      回车
+\t      制表符
+\v      垂直制表符
+\'      单引号 (只用在 '\'' 形式的rune符号面值中)
+\"      双引号 (只用在 "..." 形式的字符串面值中)
+\\      反斜杠
+```
+* 常量 const 定义
+    * 表达式在编译期间计算
+    * 可以无类型，带有隐式转换
