--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -83,3 +83,10 @@ tags:
 * 常量 const 定义
     * 表达式在编译期间计算
     * 可以无类型，带有隐式转换
+
+# 复合数据类型
+
+* 数组，对应slice，map是哈希表，struct是元素可以不同的数组
+* 数组长度编译期间确定，必须是常量
+* 一般用 切片（slice） 代替数组
+* 
