--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -89,4 +89,60 @@ tags:
 * 数组，对应slice，map是哈希表，struct是元素可以不同的数组
 * 数组长度编译期间确定，必须是常量
 * 一般用 切片（slice） 代替数组
-* 
+* Map[K]V
+    * key必须能支持==比较运算符
+    * 内置 delete 删除元素，delete(args, "attribute")
+    * 使用 for 遍历 map 时，顺序是不固定的
+    * 从 map 中取不存在的 key 得到的是初始化的值，因此要判断有没有这个元素需要
+        ```
+            if age, ok := ages["bob"]; !ok { /* ... */ }
+        ```
+* 结构体
+    * type 声明类型
+    * var 声明结构体对象
+    * 结构体内成员首字母大写是导出的
+    * 成员不能是同类型的结构体
+    * 使用匿名成员实现继承
+    * 成员 Tag ,解析对象的时候根据规则解析
+* map 中的 value 不是变量，不能取地址，struct 中的可以
+* map 零值是 nil， struct 零值是每个成员都是零值
+* go 语言的函数全部都是传值的
+* JSON
+    * 可以编码 map 和 struct
+    * json.marshaling 类似 JavaScript 中的 JSON.stringify
+    * MarshalIndent 带缩进
+    * json.Unmarshal 解码，类似 parse
+
+# 函数
+
+* bare return: return后不写，将返回函数声明中的值
+* 没有异常的概念，只有错误，处理方式：
+    * 传播错误 return nil, err
+    * 再次调用出错的方法
+    * 输出错误并结束程序，os.Exit(1)
+    * 打个log，程序继续走
+    * 忽略错误
+* 匿名函数可以作为参数或者返回值
+* 最后一个参数加省略号声明可变参数
+* defer 类似 js 的await，等 defer 执行完再继续
+* recover，恢复异常，安全的做法是有选择性的recover。换句话说，只恢复应该被恢复的panic异常
+
+# 方法
+
+* go 里面的函数和方法是两回事，函数就是 func，方法是面向对象的概念
+* 通过结构体和函数实现的 OOP
+    ```
+        // traditional function 即函数
+        func Distance(p, q Point) float64 {
+            return math.Hypot(q.X-p.X, q.Y-p.Y)
+        }
+
+        // same thing, but as a method of the Point type 即方法
+        func (p Point) Distance(q Point) float64 {
+            return math.Hypot(q.X-p.X, q.Y-p.Y)
+        }
+    ```
+* 如果结构体较大，多采用操作指针的方法
+* 用嵌入的结构体实现了类似继承/组合的效果，感觉更像组合
+* OOP 封装的实现一个是包级的，一个是结构体级的，都是通过首字母大小写实现的
+
