--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -29,14 +29,14 @@ tags:
 
 # 大体原理
 
-* 根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的
-例如 ubuntu 是这段
-```
-if installedVersion.LessThan(fixedVersion) {
-    vulns = append(vulns, vuln)
-}
-```
-    redhat 是这段 
+* 根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的，例如
+    *  ubuntu 是这段
+    ```
+    if installedVersion.LessThan(fixedVersion) {
+        vulns = append(vulns, vuln)
+    }
+    ```
+    * redhat 是这段 
     ```
     if installedVersion.LessThan(fixedVersion) {
         vuln := types.DetectedVulnerability{
@@ -51,12 +51,33 @@ if installedVersion.LessThan(fixedVersion) {
     ```
     installedVersion 取的本地的版本，fixedVersion 是从数据库中取的漏洞库的修复版本
 
-* 
+* 环境变量配置为
+    ```
+    export GOROOT=/usr/local/go
+    export GOPATH=$GOROOT/lihang
+    export GOBIN=$GOROOT/bin
+    export PATH=.:$PATH:$GOROOT
+    export PATH=.:$PATH:$GOBIN
+    ```
+    * 进入 $GOROOT/cmd/trivy 执行 go install 即可编译，编译结果在 $GOROOT/bin 中，直接运行即可，也可以加入 ~/.bashrc 的环境变量中，再 source ~/.bashrc 刷新一下就能直接 trivy xxx 了
+
+* restful 方案
+    * [go-restful](https://github.com/emicklei/go-restful.git) 框架能够提供 restful 接口，kubernetes 也是用了这个框架，还有相应的 [go-restful-swagger12](https://github.com/emicklei/go-restful-swagger12) 框架提供了接口文档
+
 
 # 代码工具
 
-* urfave/cli， 一个封装了命令行输入的框架，可以构建应用，使用命令行输入控制应用
-* ProtoBuf， rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
-* Wire， 一个依赖注入的框架，编译期完成注入， 用于初始化
-* mockery， 单元测试
-
+## urfave/cli
+* 一个封装了命令行输入的框架，可以构建应用，使用命令行输入控制应用
+## ProtoBuf
+*rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
+## Wire
+* 一个依赖注入的框架，编译期完成注入， 用于初始化
+## mockery
+* 单元测试
+## make
+* 一个开源的构建工具，多用于大型项目的编译，通过 makefile 文件配置
+## gomod
+* golang 的包管理工具，[这是介绍](https://roberto.selbach.ca/intro-to-go-modules/)，[这是官网](https://github.com/golang/go/wiki/Modules)
+* 执行 go mod help 能看到常用的命令
+* ![](/public/images/golang2.png)
