--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -29,7 +29,7 @@ tags:
 
 # 大体原理
 
-* 根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的，例如
+* 实现： 根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的，根据漏洞数据库中的版本和现有版本对比来发现漏洞，例如
     *  ubuntu 是这段
     ```
     if installedVersion.LessThan(fixedVersion) {
@@ -51,26 +51,85 @@ tags:
     ```
     installedVersion 取的本地的版本，fixedVersion 是从数据库中取的漏洞库的修复版本
 
-* 环境变量配置为
+* 数据库： 
+    * 核心代码在 pkg\github\github.go 中，用 go-github 包中的 DownloadReleaseAsset 方法从 tirvy-db 获取数据，数据为 nil 时会返回url，再用 http.Get 方法取得漏洞库数据，放到缓存中
+    * 使用 https://github.com/aquasecurity/trivy-db 操纵漏洞数据库
+        * bbolt 包序列化数据
+        * 使用 github-action 设置了定时器，定时拉取漏洞数据，配置代码在 trivy-db/.github/workflows/cron.yml 中，job 流程是
+            * 安装 go/bbolt/检出trivy-db/安装依赖
+            * 执行 make db-fetch，具体在makefile中，创建缓存目录并下载漏洞数据
+            * 构建 app
+            * 压缩数据并上传 release
+    * 使用 https://github.com/aquasecurity/vuln-list-update 抓取数据，把数据改为json存入 https://github.com/aquasecurity/vuln-list 中
+        * vuln-list-update 里面有多种不同漏洞库的仓库地址
+        * trivy-db 大部分从 vuln-list 下载，小部分如 nodejs 从官网下载
+
+* 编译方法： 环境变量配置为
     ```
-    export GOROOT=/usr/local/go
-    export GOPATH=$GOROOT/lihang
-    export GOBIN=$GOROOT/bin
-    export PATH=.:$PATH:$GOROOT
-    export PATH=.:$PATH:$GOBIN
+        export GOROOT=/usr/local/go
+        export GOPATH=$GOROOT/lihang
+        export GOBIN=$GOROOT/bin
+        export PATH=.:$PATH:$GOROOT
+        export PATH=.:$PATH:$GOBIN
     ```
     * 进入 $GOROOT/cmd/trivy 执行 go install 即可编译，编译结果在 $GOROOT/bin 中，直接运行即可，也可以加入 ~/.bashrc 的环境变量中，再 source ~/.bashrc 刷新一下就能直接 trivy xxx 了
 
 * restful 方案
     * [go-restful](https://github.com/emicklei/go-restful.git) 框架能够提供 restful 接口，kubernetes 也是用了这个框架，还有相应的 [go-restful-swagger12](https://github.com/emicklei/go-restful-swagger12) 框架提供了接口文档
+    * [iris](http://github.com/kataras/iris)，安装参考[这里](https://www.cnblogs.com/Yang-Sen/p/11990195.html)，提供了较为全面的 web 解决方案
+    * linux 中 nohup 实现后台进程跑程序，退出 shell 进程也不会被杀
+
+* 版本管理
+    * .git 过大， 处理办法
+        1. 运行 gc ，生成 pack 文件（后面的 --prune=now 表示对之前的所有提交做修剪，有的时候仅仅 gc 一下.git 文件就会小很多）
+            ```
+                $ git gc --prune=now
+            ```
+        2. 找出最大的三个文件（看自己需要）
+            ```
+                $ git verify-pack -v .git/objects/pack/*.idx | sort -k 3 -n | tail -3
+                # 示例输出：
+                #1debc758cf31a649c2fc5b0c59ea1b7f01416636 blob   4925660 3655422 14351
+                #c43a8da9476f97e84b52e0b34034f8c2d93b4d90 blob   154188651 152549294 12546842
+                #2272096493d061489349e0a312df00dcd0ec19a2 blob   155414465 153754005 165096136
+            ```
+        3. 查看那些大文件究竟是谁（c43a8da 是上面大文件的hash码）
+            ```
+                $ git rev-list --objects --all | grep c43a8da
+                # c43a8da9476f97e84b52e0b34034f8c2d93b4d90 data/bigfile
+            ```
+        4. 移除对该文件的引用（也就是 data/bigfile）
+            ```
+                $ git filter-branch --force --index-filter "git rm --cached --ignore-unmatch 'data/bigfile'"  --prune-empty --tag-name-filter cat -- --all
+            ```
+        5. 进行 repack 
+            ```
+                $ git for-each-ref --format='delete %(refname)' refs/original | git update-ref --stdin
+                $ git reflog expire --expire=now --all
+                $ git gc --prune=now
+            ```
+        6. 查看 pack 的空间使用情况
+            ```
+                $ git count-objects -v
+            ```
+    * 也可以直接用--depth=1只获取最新的commit即可
+    * 代码 fork 一份到自己的仓库，如果原作者更新了，发起一个 Pull Request 更新一下即可
 
 
 # 代码工具
 
 ## urfave/cli
 * 一个封装了命令行输入的框架，可以构建应用，使用命令行输入控制应用
+* cli使用
+    * xxx help 可以显示注册 app 时配置的信息
+    * Action 即调用方法， 传入了 cli 的上下文，可获取参数
+    * Flags 参数定义名称，类型，默认值等
+    * Aliases ， Name 的简写，都能调起app
+    * Commands 即命令，第一个是App Name， 第二个是 Commands， 第三个是Flags
+    * EnableBashCompletion 为true， 开启自动补全命令
+    * Subcommands 在 Commands 中可以嵌套
 ## ProtoBuf
-*rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
+* rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
 ## Wire
 * 一个依赖注入的框架，编译期完成注入， 用于初始化
 ## mockery
