--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -146,3 +146,17 @@ tags:
 * 用嵌入的结构体实现了类似继承/组合的效果，感觉更像组合
 * OOP 封装的实现一个是包级的，一个是结构体级的，都是通过首字母大小写实现的
 
+# 常用命令
+
+* go version 版本
+* go env 环境变量
+* go build 编译项目
+* go run 运行项目
+* get 下载并安装包和依赖
+* go install 编译并安装包和依赖
+* go list 列出包
+
+# 一些注意事项
+
+* := 的声明赋值不能在全局下使用
+* printf 用 %T 可以打印出变量的类型
