--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -146,3 +146,11 @@ tags:
 * 用嵌入的结构体实现了类似继承/组合的效果，感觉更像组合
 * OOP 封装的实现一个是包级的，一个是结构体级的，都是通过首字母大小写实现的
 
+# 接口
+
+* 接口是一种约定
+* 不需要全部实现，实现一部分即可
+* 接口可以互相嵌套
+* 如果 a 接口约定了 x 方法，结构体 B 实现了 x 方法，b 是 B 的实例， a = b 是合法的，如果 a 还有 y 方法 而 B 没有实现，a = b 就是不合法的
+* 空接口的类型实例可以被赋予任意值
+
