--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -25,7 +25,7 @@ tags:
         * interal   核心代码
         * misc      安装版本适配
         * pkg       工具包
-        * rpc       用google的protoc，用于处理结构化数据，实现了数据持久化、读取和写入
+        * rpc       用google的protoc，用于处理结构化数据，实现远程过程调用（rpc）
 
 # 大体原理
 
@@ -51,11 +51,11 @@ tags:
     ```
     installedVersion 取的本地的版本，fixedVersion 是从数据库中取的漏洞库的修复版本
 
-* 数据库： 
+* 数据库：
     * 核心代码在 pkg\github\github.go 中，用 go-github 包中的 DownloadReleaseAsset 方法从 tirvy-db 获取数据，数据为 nil 时会返回url，再用 http.Get 方法取得漏洞库数据，放到缓存中
     * 使用 https://github.com/aquasecurity/trivy-db 操纵漏洞数据库
         * bbolt 包序列化数据
-        * 使用 github-action 设置了定时器，定时拉取漏洞数据，配置代码在 trivy-db/.github/workflows/cron.yml 中，job 流程是
+        * 使用 github-action 设置了定时器，定时拉取漏洞数据，默认12小时一次，配置代码在 trivy-db/.github/workflows/cron.yml 中，job 流程是
             * 安装 go/bbolt/检出trivy-db/安装依赖
             * 执行 make db-fetch，具体在makefile中，创建缓存目录并下载漏洞数据
             * 构建 app
@@ -63,6 +63,33 @@ tags:
     * 使用 https://github.com/aquasecurity/vuln-list-update 抓取数据，把数据改为json存入 https://github.com/aquasecurity/vuln-list 中
         * vuln-list-update 里面有多种不同漏洞库的仓库地址
         * trivy-db 大部分从 vuln-list 下载，小部分如 nodejs 从官网下载
+    * 保存历史数据最好还是用 server 的数据库 bbolt，反正也都实现了 rpc，直接调就行，请求历史数据也用 rpc 从 server 拿数据
+        * bbolt 存的是 key/value，一个 bucket 相当于一个表，key 不能重复
+        * bbolt 不能多个进程同时打开一个数据库，会导致挂起，可以传一个延时的项避免
+        ```
+            db, err := bolt.Open("my.db", 0600, &bolt.Options{Timeout: 1 * time.Second})
+        ```
+        * bbolt 操作都在事务中，读写事务同一时间只能有一个 Update，只读的可以同时多个 View，也可用 Begin 自己控制
+        * 单个事务时线程不安全，处理多 routine 需要多个事务
+        * 创建 buckets，用 CreateBucket 或者 CreateBucketIfNotExists，删除用 DeleteBucket，获取用 Bucket([]byte(name))
+        * NextSequence 能从 Bucket 中取一个唯一的 uuid，可以拿来当key
+        * 从 Bucket 中取 Cursor 实现迭代，类似于迭代器，可以循环数据
+        ```
+            First()  Move to the first key.
+            Last()   Move to the last key.
+            Seek()   Move to a specific key.
+            Next()   Move to the next key.
+            Prev()   Move to the previous key.
+        ```
+    * trivy 把数据放到了 ~/.cache/trivy/db(从os.UserCacheDir()获取) 中，现在131MB，结构是
+        * trivy -> metadata -> data 版本/类型/更新时间等信息
+        * vulnerability -> 漏洞id(CVE-XXX) -> 漏洞明细json
+        * 各种系统 -> 各种软件包 -> 漏洞id(CVE-XXX) -> 漏洞明细json
+
+
+* 包解析：
+    * 在 [fanal](https://github.com/aquasecurity/fanal) 中，能把操作系统的包 (os package) 解析出其详情。
+    * trivy 中 pkg\scanner\local\scan.go 73 行直接解析出了所有依赖包
 
 * 编译方法： 环境变量配置为
     ```
@@ -130,6 +157,7 @@ tags:
     * Subcommands 在 Commands 中可以嵌套
 ## ProtoBuf
 * rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
+* 实现了远程过程调用，建一个服务端，多个客户端，数据库只放在服务端，客户端上也能扫描，这个过程使用了 protobuf 实现远程调用
 ## Wire
 * 一个依赖注入的框架，编译期完成注入， 用于初始化
 ## mockery
@@ -140,3 +168,4 @@ tags:
 * golang 的包管理工具，[这是介绍](https://roberto.selbach.ca/intro-to-go-modules/)，[这是官网](https://github.com/golang/go/wiki/Modules)
 * 执行 go mod help 能看到常用的命令
 * ![](/public/images/golang2.png)
+* [常用命令](https://zhuanlan.zhihu.com/p/103534192)
