--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -36,7 +36,7 @@ tags:
         vulns = append(vulns, vuln)
     }
     ```
-    * redhat 是这段 
+    * redhat 是这段
     ```
     if installedVersion.LessThan(fixedVersion) {
         vuln := types.DetectedVulnerability{
@@ -81,10 +81,61 @@ tags:
             Next()   Move to the next key.
             Prev()   Move to the previous key.
         ```
+        * 使用 bolter 可以查看 bbolt 数据，但不能修改，而且有时候打不开会一直开着进程占用数据库，导致其他方式读取失效，要 kill 进程
     * trivy 把数据放到了 ~/.cache/trivy/db(从os.UserCacheDir()获取) 中，现在131MB，结构是
         * trivy -> metadata -> data 版本/类型/更新时间等信息
         * vulnerability -> 漏洞id(CVE-XXX) -> 漏洞明细json
         * 各种系统 -> 各种软件包 -> 漏洞id(CVE-XXX) -> 漏洞明细json
+
+* 新增
+    * ~~扫描历史也放到 bbolt 中，数据结构如下~~
+        * ~~trivy -> history -> 20200729 -> 12:12:12 -> [{Target: "xxx", Typec: "xxx",VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]},{Target: "xxx", Typec: "xxx", VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]}]~~
+    * ~~账号数据保存需要 头-行 的结构，具体如下~~
+        * ~~trivy -> users -> head -> "张三" -> 9234572938457(uuid)~~
+        * ~~trivy -> users -> line -> 9234572938457(uuid) -> username -> "张三"~~
+                                                        ~~-> password -> "123456"~~
+                                                        ~~-> type -> super/common~~
+                                                        ~~-> ...~~
+    * trivy.db 每次更新都是全量更新，不知道为啥压缩一下17MB，解压了就是126MB，把我坑死了，还是要用mysql
+    * mysql 数据结构如下
+        ```
+            -- trivy.history definition
+            CREATE TABLE `history` (
+            `scanid` int(20) NOT NULL,
+            `type` varchar(20) DEFAULT NULL,
+            `time` datetime DEFAULT NULL,
+            `target` varchar(255) DEFAULT NULL,
+            `userid` int(20) DEFAULT NULL,
+            PRIMARY KEY (`scanid`)
+            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+
+            -- trivy.historyline definition
+            CREATE TABLE `historyline` (
+            `scanid` int(20) NOT NULL,
+            `target` varchar(20) DEFAULT NULL,
+            `type` varchar(20) DEFAULT NULL,
+            `vulnerabilityid` varchar(100) NOT NULL,
+            `pkgname` varchar(50) DEFAULT NULL,
+            `installedversion` varchar(20) DEFAULT NULL,
+            `fixedversion` varchar(20) DEFAULT NULL,
+            `digest` varchar(50) DEFAULT NULL,
+            `diffid` varchar(50) DEFAULT NULL,
+            `SeveritySource` varchar(50) DEFAULT NULL,
+            PRIMARY KEY (`scanid`,`vulnerabilityid`) USING BTREE
+            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+
+            -- trivy.`user` definition
+            CREATE TABLE `user` (
+            `userid` int(20) NOT NULL,
+            `username` varchar(255) NOT NULL,
+            `password` varchar(255) NOT NULL,
+            `createtime` datetime DEFAULT NULL,
+            `logintime` datetime DEFAULT NULL,
+            `usertype` varchar(2) DEFAULT NULL,
+            PRIMARY KEY (`userid`) USING BTREE
+            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+        ```
+    * history 分头行表，头表一次扫描存一条，行表一个漏洞存一条，行表只存漏洞库中查不到的数据，如安装版本，修复版本等，其他数据从 bbolt 中查。
 
 
 * 包解析：
