--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -1,5 +1,18 @@
 ---
 title: goline
 date: 2020-09-01 16:23:26
-tags:
+tags: goline
 ---
+
+玩一玩硬件
+
+# 电路原理图
+
+这部分学习如何看电路图各种符号，各项元器件的作用
+
+## HACK 的高精度时钟电路
+
+* J 代表 PCB 上出来的引脚
+* 红色的标表示相同标号连在一起
+* CH340E 模块： [CH340](https://www.st.com/content/st_com/zh/search.html#q=stm32-t=products-page=1)上的资料显示， 10 号引脚是 3.3V 输入电压，如果需要接入的电压是 5V ，就接个退耦电容
+* 退耦电容： 也叫旁路电容，PCB 设计都这样，电源设计中，芯片动态吸收电流，电压就不稳定，和芯片电压产生耦合，为了退耦，减小电压的震荡，隔直通交，震荡就小了[参考](https://zhuanlan.zhihu.com/p/98971581)
