--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -12,7 +12,28 @@ tags: goline
 
 ## HACK 的高精度时钟电路
 
-* J 代表 PCB 上出来的引脚
-* 红色的标表示相同标号连在一起
-* CH340E 模块： [CH340](https://www.st.com/content/st_com/zh/search.html#q=stm32-t=products-page=1)上的资料显示， 10 号引脚是 3.3V 输入电压，如果需要接入的电压是 5V ，就接个退耦电容
-* 退耦电容： 也叫旁路电容，PCB 设计都这样，电源设计中，芯片动态吸收电流，电压就不稳定，和芯片电压产生耦合，为了退耦，减小电压的震荡，隔直通交，震荡就小了[参考](https://zhuanlan.zhihu.com/p/98971581)
+* usb 部分
+    * J 代表 PCB 上出来的引脚
+    * 红色的标表示相同标号连在一起
+    * CH340E 模块： [CH340](https://www.st.com/content/st_com/zh/search.html#q=stm32-t=products-page=1)上的资料显示， 10 号引脚是 3.3V 输入电压，如果需要接入的电压是 5V ，就接个退耦电容
+    * 退耦电容： 也叫旁路电容，PCB 设计都这样，电源设计中，芯片动态吸收电流，电压就不稳定，和芯片电压产生耦合，为了退耦，减小电压的震荡，隔直通交，震荡就小了[参考](https://zhuanlan.zhihu.com/p/98971581)
+* 电源部分
+    * fuse 是保险丝，电源出来先接了一个保险丝
+    * C1、C3 两个电容并联，电容量相加，在不同频率下都能有较好的滤波效果
+
+## 选型参数
+
+![](/public/images/goline1.jpg)
+* 频率： 芯片运行速度，这里是 MHz ，现在电脑 CPU 都到 GHz 了，差距好大
+* core: 芯片核心，由 ARM 公司提供， ARM 公司产片如下，[参考资料](https://www.zhihu.com/question/296178433/answer/692275926)
+![](/public/images/goline2.jpg)
+* Flash/Ram/EEprom
+    * EEprom 就是电擦除的 ROM ，相当于电脑硬盘，多用于存储数据，掉电数据仍然在；
+    * Ram 相当于电脑内存，存取快，掉电数据丢失，从 Flash 中读代码运行用的；
+    * Flash 是广义上的 EEprom ，但是成本低，结构简单，低端芯片只有 Flash ，还有 Flash 按扇区操作，结构适于不需频繁改写的程序存储器。
+* Package Name: 封装方式，规定引脚数量、间距、芯片大小等
+* IONb ?????????? 不知道
+* Supply voltage： 支持电压
+* Nb Timer: 定时器
+* Nb ADC/DAC: 模数转换/数模转换
+* SPI/I2S/I2C/UART/CAN: 几种总线技术
