--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -20,7 +20,8 @@ tags: goline
 * 电源部分
     * fuse 是保险丝，电源出来先接了一个保险丝
     * C1、C3 两个电容并联，电容量相加，在不同频率下都能有较好的滤波效果
-    * 升压和降压电路，就是指电力电子设计当中常说的BUCK/BOOST电路。这两种电路经常一起出现在电路设计当中，BUCK电路指输出小于电压的单管不隔离直流变换，BOOST指输出电压高于输入电压的单管不隔离直流变换。作为最常见也比较基础的两种电路，本篇文章就主要对BUCK/BOOST电路原理进行讲解。
+    * 升压和降压电路，就是指电力电子设计当中常说的BUCK/BOOST电路。这两种电路经常一起出现在电路设计当中，BUCK电路指输出小于电压的单管不隔离直流变换，BOOST指输出电压高于输入电压的单管不隔离直流变换。作为最常见也比较基础的两种电路。
+    * SPX3819 是常用的降压芯片
 
 ## 选型参数
 
@@ -38,3 +39,10 @@ tags: goline
 * Nb Timer: 定时器
 * Nb ADC/DAC: 模数转换/数模转换
 * SPI/I2S/I2C/UART/CAN: 几种总线技术
+
+## TODO
+* 电源，暂定两节7号电池，总结3v升5v 的资料，买原件，在面包板上实现稳定的5v电压
+* 淘宝一个贴片焊接的练习板，学怎么焊接贴片
+* 用51实现goline的功能
+* 买的3D打印机学会使用
+* lcd 定制学习，用什么协议，供电，功耗等
