--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -38,3 +38,10 @@ tags: goline
 * Nb Timer: 定时器
 * Nb ADC/DAC: 模数转换/数模转换
 * SPI/I2S/I2C/UART/CAN: 几种总线技术
+
+## lcd 定制
+* 商家给了一版[使用手册](/public/assets/lcdBook.pdf)
+* 现在用的 1602 ，要定制段码屏，还需要芯片驱动，多采用 HT1621 ，[参考](https://zhuanlan.zhihu.com/p/39236310)
+* lcm（LCD Module） 是加上外围电路的 lcd
+* 定制样式 ![](/public/images/goline3.jpg)
+* lcm 模块，TN屏正显，1.6mm厚度，温度0-50，连接用金属管脚，尺寸50mm*15mm，不要丝印，电压3.3V，占空比1/2，视角3点
