--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -21,7 +21,7 @@ tags: goline
     * fuse 是保险丝，电源出来先接了一个保险丝
     * C1、C3 两个电容并联，电容量相加，在不同频率下都能有较好的滤波效果
     * 升压和降压电路，就是指电力电子设计当中常说的BUCK/BOOST电路。这两种电路经常一起出现在电路设计当中，BUCK电路指输出小于电压的单管不隔离直流变换，BOOST指输出电压高于输入电压的单管不隔离直流变换。作为最常见也比较基础的两种电路。
-    * SPX3819 是常用的降压芯片
+    * SPX3819 是常用的降压芯片，AMS1117也常用
 
 ## 选型参数
 
@@ -39,10 +39,116 @@ tags: goline
 * Nb Timer: 定时器
 * Nb ADC/DAC: 模数转换/数模转换
 * SPI/I2S/I2C/UART/CAN: 几种总线技术
+* 关于光耦H206测试得到的结果：
+    * ![](/public/images/goline13.jpg)
+
+## AD 画PCB
+
+* altium designer 快捷键
+    * shift + s 只显示当前一层
+    * l 调整层的显示
+* PCB 各层及作用
+    English |	中文 |	作用 
+    - | - | -
+    Top Layer | 顶层信号层 | 主要用来放置走线和元器件
+    Bottom Layer | 底层信号层 | 同上，就是一个在上面一个在背面
+    Keep out　Layer | 禁止布线层 | 所选区域外禁止布线，也有人用于设计板框
+    Mechanical 1 | 机械层1 | 用于界定元件位置（可当Keep-out用，具体看制板厂要求）
+    Mechanical 13、14 | 机械层13、14 | 元件本体尺寸，包括三维
+    Mechanical 15、16 | 机械层15、16 | 用于在设计极早期估算线路板尺寸
+    Top Overlay | 顶层丝印层 | 用来标注各种标识，元件号，商标等
+    Bottom Overlay | 底层丝印层 | 底层丝印，同上，就是在底层
+    Top Paste | 顶层锡膏防护层 | 定义不被盖油的层，用于焊接或SMT加工
+    Bottom Past | 底层锡膏防护层 | 同上
+    Top Solder | 顶层阻焊层 | 定义不可焊接的区域保护铜箔不被氧化等作用
+    Bottom Solder | 底层阻焊层 | 同上，即板子上绿（其他）色的外面这一层
+    Drill Guide | 钻孔定位层 | 焊盘及过孔的钻孔的中心定位坐标层（注意是中心）
+    Drill Drawing | 钻孔描述层 | 焊盘及过孔的钻孔尺寸孔径尺寸描述层
+    Multi-Layer | 多层 | 过孔穿透此层
+* mil（中文译音：密耳），即千分之一英寸，等于0.0254mm（毫米）。
+
+    一般用来标明丝、线的直径或按页出售的材料的厚度。
+
+    常用直径尺寸的密尔与毫米换算如下：
+
+    1.0mil = 0.025mm
+    1.2mil = 0.030mm
+    1.25mil = 0.032mm
+* 常见封装
+    * SOP/SOIC封装，即小外形封装，很常用，外形如下
+        * ![](/public/images/goline9sop.png)
+    * DIP封装，即双列直插式封装，stc89c51就是这种
+        * ![](/public/images/goline6dip.png)
+    * PLCC封装，即塑封J引线芯片封装。外形呈正方形，四周都有管脚，比DIP小得多。
+        * ![](/public/images/goline7plcc.jpg)
+    * TQFP封装，即薄塑封四角扁平封装。四边扁平封装工艺能有效利用空间，从而降低对印刷电路板空间大小的要求。
+        * ![](/public/images/goline10tqfp.jpg)
+    * PQFP封装，即塑封四角扁平封装。芯片引脚之间距离很小，管脚很细。一般大规模或超大规模集成电路采用这种封装形式，其引脚数一般都在100以上。
+        * ![](/public/images/goline8pqfp.jpg)
+    * BGA封装，即球栅阵列封装。BGA封装的I/O端子以圆形或柱状焊点按阵列形式分布在封装下面，BGA技术的优点是I/O引脚数虽然增加了，但引脚间距并没有减小反而增加了，从而提高了组装成品率。
+        * ![](/public/images/goline12bga.png)
+    * HDR封装，直插式封装，就是各种单双排的排针
+    * C0603/C0805等，贴片电阻容的常见封装
+        * C即电容，也有不带C的是电阻，大小一样的，不过电容的可能带极性
+        * 0603即（长0.06英寸 * 宽0.03英寸） 
+* PCB 设计规则
+    * 间距规则： 建议 4-6mil 
+    * 线宽规则： 一般线大于 6mil，电源大于 15mil
+    * 过孔规则： 最小孔径大于12mil， 过孔直径一般是2*12±2 取个下限就是 22mil
+    * 过孔上焊盘间隙(PlaneClearance)： 推荐 8mil
+    * PolygenConnect: 过孔采用全连接，焊盘用十字连接
+    * 对象与丝印最小间距(Manufacturing-Slik To Solder Mask Clearance)：2mil
+    * 走线的时候尽量从中间出线不要走边边 
+* altium designer 中的英文
+    * via： 过孔
+    * Clearance： 间隙空隙
+    * plane: 层，比如power plane 就是电源层
+    * pad： 焊盘
+    * overlay: 丝印层
+    * slik: 丝印
+* PCB 输出
+    * 装配图： PDF，一般是丝印层+阻焊层+机械层(Mechanical)
+    * BOM 表： 报告-bill，可用模板
+    * Gerber 文件：文件-制造输出-gerber
+        * 单位英寸，格式2：4
+        * 镜像层全部去掉，机械13，15去掉
+        * 钻孔图层，勾上输出所有钻孔
+        * 高级-胶片规则，边界尺寸，加个0，改成A3纸
+    * NC Dril 文件(钻孔文件)： 文件-制造输出-NC Drill
+        * 格式 2：4
+    * Test Point Report(坐标文件)：  文件-装配输出-Generates pick and place files
+        * 格式用文本
+        * 输出单位用英制
+    * IPC 网表： 文件-制造输出-Test Point Report，用于开短路核对
+        * 报告格式 IPC-D-356A，输出 
+
+
+## stm8 相关
+
+* #define是C语言中定义的语法，是预处理指令，在预处理时进行简单而机械的字符串替换，不作正确性检查，只有在编译已被展开的源程序时才会发现可能的错误并报错。
+
+* typedef是关键字，在编译时处理，有类型检查功能。它在自己的作用域内给一个已经存在的类型一个别名，但不能在一个函数定义里面使用typedef。用typedef定义数组、指针、结构等类型会带来很大的方便，不仅使程序书写简单，也使意义明确，增强可读性。
+
+* stm8 重要的寄存器，一共五种![](/public/images/goline3.jpg)，x可以是A\B\C...，O即output,I即Input，D为Direct，C为Config。
+
+* 寄存器功能对应功能如下![](/public/images/goline4.jpg)，相应的配置流程如下图![](/public/images/goline5.jpg)
+
+## 实践相关
+
+* 发光二极管的方向，有个大写的T字的标志，T上面的横对应正极。还有个方法是正面有个带绿色小标的一端，是负极，焊这个要注意连接，有时焊不到焊盘上
+* 贴片电阻阻值的读取，一共三位abc，阻值是ab乘以10的c次方
+* 轻触开关，距离近的两个端口是不连接的，距离远的两个端口是连接的，直接导致我第一次打板失败
+* swim信号不要用作lcd的输出，不然插着lcd的时候不能烧录，这个也是第一次高错了
+* 没有买电源的开关，下次买的时候带上
 
 ## TODO
+* 用51实现goline的功能
+    * 用 9V 驱动这个系统，如果这样也不能撑30小时以上，那么干电池就没有意义了
+    * UV4.exe 新建工程，芯片选择 AT89C51/52 ，51/52内核相同，都一样，新建c文件并放入group，编译自动生成 hex 文件
 * 电源，暂定两节7号电池，总结3v升5v 的资料，买原件，在面包板上实现稳定的5v电压
 * 淘宝一个贴片焊接的练习板，学怎么焊接贴片
-* 用51实现goline的功能
 * 买的3D打印机学会使用
+    * 出料的圈圈
+    * 放元件的小盒子
+    * 便携显示器的外盒
 * lcd 定制学习，用什么协议，供电，功耗等
