--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -154,6 +154,28 @@ tags:
 * 如果 a 接口约定了 x 方法，结构体 B 实现了 x 方法，b 是 B 的实例， a = b 是合法的，如果 a 还有 y 方法 而 B 没有实现，a = b 就是不合法的
 * 空接口的类型实例可以被赋予任意值
 
+# goroutines 和 channels
+
+* go func (){} 新启一个协程
+* 协程之间用 channel 通信，通信方式如下
+```
+ch <- x  // a send statement
+x = <-ch // a receive expression in an assignment statement
+<-ch     // a receive statement; result is discarded
+close(ch) // close channel
+```
+* 有缓存和无缓存的 channels 是不同的
+
+  * 无缓存的，接受方接收不到 协程就会阻塞，发送方没被接受也会阻塞
+```
+ch = make(chan int)    // unbuffered channel
+ch = make(chan int, 0) // unbuffered channel
+```
+  * 有缓存的，缓存是个队列，先进先出，满了再往里发协程就阻塞，空了从里面接收也会阻塞
+```
+ch = make(chan int, 3) // buffered channel with capacity 3
+```
+
 # 常用命令
 
 * go version 版本
