--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -122,6 +122,8 @@ tags:
             `fixedversion` varchar(100) DEFAULT NULL,
             `digest` varchar(200) DEFAULT NULL,
             `diffid` varchar(200) DEFAULT NULL,
+            `library` varchar(20) DEFAULT NULL,
+            `severity` varchar(20) DEFAULT NULL,
             `severitysource` varchar(200) DEFAULT NULL,
             PRIMARY KEY (`scanid`,`vulnerabilityid`,`targetfile`,`installedversion`) USING BTREE
             ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
