--- a/source/_posts/2020-09-23-docker.md
+++ b/source/_posts/2020-09-23-docker.md
@@ -6,27 +6,32 @@ tags:
 
 docker 的常用命令，看文档太费劲，稍微记一下
 
-* docker 安装
+# docker 安装
 ```
 docker version
 docker info
 ```
 
-* docker 镜像
+# docker 镜像
 ```
-docker pull nignx:
+docker pull [name]:[tag]
 docker images
 docker image ls
+// 镜像构建
+docker build -t [name]:[tag] .
+// 镜像导出
+docker save [name]:[tag] -o ./Desktop/test.tar
+// 导入
+docker load -i test.tar
 ```
 
-* docker 增删启停
+# docker 增删启停
 ```
 // 从镜像新建
 // -p 是端口映射，内部80外部81
 // -it 进入容器
 // /bin/bash 启动执行命令
-// -rm 停止后自动删除
-docker container run -rm -p 81:80 -it httpd:latest /bin/bash
+docker container run -p 81:80 -it httpd:latest /bin/bash
 
 // 删除,rmi 删除镜像
 docker container rm f144a5992e99
@@ -56,6 +61,7 @@ docker attach f144a5992e99
 docker container exec -it f144a5992e99 /bin/bash
 ```
 
+# 其他
 * Options	Mean
     * -i	以交互模式运行容器，通常与 -t 同时使用；
     * -t	为容器重新分配一个伪输入终端，通常与 -i 同时使用；
@@ -65,3 +71,4 @@ docker container exec -it f144a5992e99 /bin/bash
 ```
 docker tag 1417b43a3ff5 [name]:[tag]
 ```
+
